--- a/src/Styles/Cart.css
+++ b/src/Styles/Cart.css
@@ -1,3 +1,10 @@
 .cart-header{
     margin-left: 70px;
+    margin-bottom: 25px;
+}
+
+hr{
+    width: 80%;
+    margin: 0 auto;
+    opacity: .1;
 }
