--- a/src/Styles/CartItem.css
+++ b/src/Styles/CartItem.css
@@ -1,4 +1,36 @@
 .cart-item{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 30px 130px 30px 130px;
+}
+
+.item-image{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.item-image-wrap{
+    display: flex;
+}
+
+.product-display{
+    width: 200px;
+    height: 200px;
+    margin-top: 8px;
+    margin-left: 15px;
+}
+
+.cart-btn{
+    background-color: #fff;
+    color: #000;
+    font-size: 20px;
+    border: 1px solid #000;
+    width: 40px;
+}
+
+.quantity{
+    background-color: #fff;
+    color: #000;
+    width: 40px;
 }
