--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -7,6 +7,14 @@
     padding: 10px;
     margin: 20px 50px;
     transition: all ease-in-out .2s;
+    position: relative;
+}
+
+.cart{
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
+    display: none;
 }
 
 .product-wrap:hover{
