--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -10,11 +10,15 @@
     position: relative;
 }
 
-.cart{
+#cart{
     position: absolute;
     bottom: 40px;
     right: 20px;
-    display: none;
+    /* display: none; */
+}
+
+.on{
+    display: block !important;
 }
 
 .product-wrap:hover{
