--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -63,3 +63,11 @@ select{
     font-weight: bolder;
     display: none;
 }
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: .1;
+    display: none;
+}
