--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -77,3 +77,32 @@ select{
     right: 0;
     z-index: 10;
 }
+
+.overlay-card{
+    width: 50%;
+    background-color: red;
+    position: absolute;
+    right: 400px;
+    z-index: 20;
+    font-size: 10px;
+}
+
+.overlay-card .product-display{
+    width: 100px;
+    height: 130px;
+    margin-top: 12px;
+}
+
+.overlay-card .cart-btn, .overlay-card .quantity{
+    font-size: 12px;
+    width: 20px;
+    height: 10px;
+    text-align: center;
+    position: relative;  
+}
+
+.overlay-card .text{
+    position: absolute;
+    top: 3px;
+    right: 6px;
+}
