--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -79,18 +79,17 @@ select{
 }
 
 .overlay-card{
-    width: 50%;
+    width: 20%;
     background-color: red;
     position: absolute;
-    right: 400px;
+    right: 100px;
     z-index: 20;
     font-size: 10px;
 }
 
 .overlay-card .product-display{
-    width: 100px;
+    width: 50px;
     height: 130px;
-    margin-top: 12px;
 }
 
 .overlay-card .cart-btn, .overlay-card .quantity{
@@ -105,4 +104,8 @@ select{
     position: absolute;
     top: 3px;
     right: 6px;
+}
+
+.overlay-card .sizes p {
+    font-size: 12px;
 }
