--- a/src/Styles/OverlayCart.css
+++ b/src/Styles/OverlayCart.css
@@ -5,19 +5,57 @@
 
 .overlayCartImg{
     width: 100px;
-    height: 100px;
+    height: 140px;
+    margin: 8px 5px;
+}
+
+.myBag{
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.overlayCartItem{
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.cartQuantity{
+    font-size: 16px;
+    margin-left: 8px;
+    margin-top: 8px;
 }
 
 .cartOverlayItemName{
     font-size: 14px;
-    line-height: 1.5em;
+    line-height: 1.2em;
     font-weight: lighter;
-    margin-bottom: 5px;
+    margin-bottom: 6px;
 }
 
 .cartOverlayPrice{
-  font-size: 14px;
-  margin-bottom: 5px;
+  font-size: 13px;
+}
+
+.size, .cartColor{
+    font-size: 14px;   
+    margin-bottom: 6px; 
+}
+
+.cartColor{
+    margin-top: -10px;
+    margin-bottom: 2px;
+}
+
+.sizes, .cartColors{
+    display: flex;
+}
+
+.sizeBox{
+    border: 1px solid #000;
+    width: 15px;
+    text-align: center;
+    font-weight: 500;
+    margin: 0 2px;
 }
 
 .overlayCartBtn{
@@ -25,4 +63,12 @@
     color: #000;
     background-color: #fff;
     width: 30px;
+    margin-bottom: 5px;
+}
+
+.overlayColors{
+  width: 15px;
+  height: 15px;
+  background-color: aqua;
+  margin: 0 2px;
 }
