--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -80,11 +80,12 @@ select{
 
 .overlay-card{
     width: 20%;
-    background-color: red;
+    background-color: #fff;
     position: absolute;
     right: 100px;
     z-index: 20;
     font-size: 10px;
+    padding: 10px;
 }
 
 
