--- a/src/Styles/MiniCheckout.css
+++ b/src/Styles/MiniCheckout.css
@@ -8,3 +8,11 @@
     display: flex;
     justify-content: space-between;
 }
+
+.viewBag{
+    font-size: 10px;
+    background-color: #fff;
+    border: 1px solid #000;
+    color: #000;
+    width: 50%;
+}
