--- a/src/Styles/MiniCheckout.css
+++ b/src/Styles/MiniCheckout.css
@@ -14,5 +14,10 @@
     background-color: #fff;
     border: 1px solid #000;
     color: #000;
-    width: 50%;
+    width: 40%;
+}
+
+.miniCheckoutBtn{
+    width: 40%;
+    font-size: 10px;
 }
