--- a/src/Styles/OverlayCart.css
+++ b/src/Styles/OverlayCart.css
@@ -41,6 +41,7 @@
     margin-bottom: 6px; 
 }
 
+
 .cartColor{
     margin-top: -10px;
     margin-bottom: 2px;
@@ -56,6 +57,13 @@
     text-align: center;
     font-weight: 500;
     margin: 0 2px;
+    transition: all ease-in-out .3s;
+}
+
+.sizeBox:hover{
+    background: #000;
+    color: #fff;
+    cursor: pointer;
 }
 
 .overlayCartBtn{
