--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -69,21 +69,21 @@ select{
     width: 100%;
     height: 100%;
     background-color: #000;
-    opacity: .1;
+    opacity: .4;
     display: none;
     position: absolute;
     top: 50px;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 5;
 }
 
 .overlay-card{
     width: 20%;
-    background-color: #fff;
+    background-color: red;
     position: absolute;
     right: 100px;
-    z-index: 20;
+    z-index: 5;
     font-size: 10px;
     padding: 10px;
 }
