--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -68,8 +68,8 @@ select{
 .overlay{
     width: 100%;
     height: 100%;
-    background-color: #000;
-    opacity: .4;
+    background-color:  rgba(57, 55, 72, 0.22);;
+    opacity: 1;
     display: none;
     position: absolute;
     top: 50px;
