--- a/src/Styles/MiniCheckout.css
+++ b/src/Styles/MiniCheckout.css
@@ -1,29 +1,29 @@
-.totalWrap{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14px;
+.totalWrap {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
 }
 
-.miniBtnWrap{
-    display: flex;
-    justify-content: space-between;
+.miniBtnWrap {
+  display: flex;
+  justify-content: space-between;
 }
 
-.viewBag{
-    font-size: 10px;
-    background-color: #fff;
-    border: 1px solid #000;
-    color: #000;
-    width: 40%;
+.viewBag {
+  font-size: 10px;
+  background-color: #fff;
+  border: 1px solid #000;
+  color: #000;
+  width: 40%;
 }
-
 
 .viewBag a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
+  transition: all ease-in-out 0.3s;
 }
 
-.miniCheckoutBtn{
-    width: 40%;
-    font-size: 10px;
+.miniCheckoutBtn {
+  width: 40%;
+  font-size: 10px;
 }
