--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -68,7 +68,7 @@ select{
 .overlay{
     width: 100%;
     height: 100%;
-    background-color:  rgba(57, 55, 72, 0.22);;
+    background-color:  rgba(57, 55, 72, 0.22);
     opacity: 1;
     display: none;
     position: absolute;
