--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -79,7 +79,7 @@ select{
 }
 
 .overlay-card{
-    width: 20%;
+    width: 25%;
     background-color: #fff;
     position: absolute;
     right: 100px;
@@ -88,6 +88,11 @@ select{
     padding: 10px;
 }
 
+@media only screen and (max-width: 1100px){
+    .overlay-card{
+        width: 40%;
+    }
+}
 
 
 
