--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -90,7 +90,15 @@ select{
 
 @media only screen and (max-width: 1100px){
     .overlay-card{
-        width: 40%;
+        width: 32%;
+        right: 5px;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .overlay-card{
+        width: 50%;
+        right: 10px;
     }
 }
 
