--- a/src/Styles/ProductDescription.css
+++ b/src/Styles/ProductDescription.css
@@ -89,3 +89,14 @@ button{
     height: 450px;
     width: 500px
 }
+
+@media screen and (max-width: 700px){
+    .product{
+        flex-direction: column;
+    }
+
+    .product-image{
+        height: 300px;
+        width: 300px;
+    }
+}
