--- a/src/Styles/ProductDescription.css
+++ b/src/Styles/ProductDescription.css
@@ -99,4 +99,9 @@ button{
         height: 300px;
         width: 300px;
     }
+
+    .details{
+        margin-bottom: 20px;
+        align-self: center;
+    }
 }
