--- a/src/Styles/ProductDescription.css
+++ b/src/Styles/ProductDescription.css
@@ -90,14 +90,21 @@ button{
     width: 500px
 }
 
+@media screen and (max-width: 1100px){
+    .product-image{
+        height: 300px;
+        width: 300px;
+    }
+}
+
 @media screen and (max-width: 700px){
     .product{
         flex-direction: column;
     }
 
     .product-image{
-        height: 300px;
-        width: 300px;
+        height: 280px;
+        width: 280px;
     }
 
     .details{
