--- a/src/Styles/ProductDescription.css
+++ b/src/Styles/ProductDescription.css
@@ -64,16 +64,16 @@
     flex-direction: row;
 }
 
-.selected-color{
-    border: 3px solid #000;
-}
-
 .colors div{
     width: 30px;
     height: 20px;
     margin-right: 5px;
     padding: 4px;
     border: 1px solid #000;
+}
+
+.selected-color{
+    border: 3px solid #000 !important;
 }
 
 button{
