--- a/src/Styles/ProductDescription.css
+++ b/src/Styles/ProductDescription.css
@@ -39,6 +39,11 @@
     cursor: pointer;
 }
 
+.selected-size{
+    background-color: #000;
+    color: #fff;
+}
+
 .title{
     margin-bottom: 15px;
 }
