--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -67,7 +67,7 @@ select{
 
 .overlay{
     width: 100%;
-    height: 100%;
+    height: 250vh;
     background-color:  rgba(57, 55, 72, 0.22);
     opacity: 1;
     display: none;
@@ -75,6 +75,7 @@ select{
     top: 50px;
     left: 0;
     right: 0;
+    bottom: 0;
     z-index: 5;
 }
 
